--- a/belajar-vite-day4/index.html
+++ b/belajar-vite-day4/index.html
@@ -2,12 +2,12 @@
 <html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon/fonts/remixicon.css"
       rel="stylesheet" />
-    <title>Vite + React</title>
+    <title>Team One</title>
   </head>
   <body class="bg-slate-100" id="home">
     <div id="root"></div>
